--- a/action.yml
+++ b/action.yml
@@ -1,21 +1,15 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-
-# Define your inputs here.
+name: 'Hello World Docker Action'
+description: 'Say hello to a user or the world.'
 inputs:
   who-to-greet:
-    description: 'Your input description here'
+    description: 'Who to greet'
     required: true
-    default: 'World'
-
-# Define your outputs here.
+    default: 'world'
 outputs:
-  greeting:
-    description: 'Your output description here'
-
+  time:
+    description: 'The time we said hello.'
 runs:
-  using: docker
-  image: Dockerfile
-  env:
-    INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
+  using: 'docker'
+  image: 'Dockerfile'
+  args:
+    - ${{ inputs.who-to-greet }}
